<resources>
    <string name="app_name">Nasa_photo</string>
    <string name="app_name_text">Фотографии NASA</string>
    <string name="info">Инфо:</string>
    <string name="error">Ошибка</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>

    <!-- Menu items -->
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="settings">Settings</string>
    <string name="fab">FAB</string>
    <string name="search">Search</string>
    <string name="archive">Archive</string>
    <string name="send">Send</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="red">Red</string>
    <string name="space">Space</string>
    <string name="style">Style</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="app_bar_telescope">app_bar_telescope</string>
    <string name="navigation_indicator_1">navigation_indicator_1</string>
    <string name="navigation_indicator_2">navigation_indicator_2</string>
    <string name="navigation_indicator_3">navigation_indicator_3</string>
    <string name="earth">Земля</string>
    <string name="picture">Фото</string>
    <string name="photo_album">Галерея</string>
    <string name="letStart">Начнём</string>


    <!-- Строки для contentDescription. -->
    <string name="appbar">appbar</string>
    <string name="image_menu_item">image_menu_item</string>
    <string name="wiki_button">Wiki_button</string>
    <string name="tab_navigation_layout">tab_navigation_layout</string>

    <!-- Строки для фрагмента NASA Photo album. -->
    <string name="NASA_photo_album">Фото альбом NASA</string>
    <string name="General_theme">Основная тема</string>
    <string name="General_description">Доп. описание</string>
    <string name="Key_word">Ключевое слово</string>
    <string name="Find">Найти</string>
    <string name="Earth_photo">Фото планеты Земля</string>
    <string name="greetings_first_text_first">Добро пожаловать в мир NASA</string>
    <string name="greetings_first_text_second">Здесь вы сможете увижеть свежите фото Земли</string>
    <string name="greetings_second_text">Увидеть фотографию дня</string>
    <string name="greetings_threeth_text">И просмотреть галерею NASA</string>
    <string name="Second_theme">Доп. тема</string>
    <string name="key_word">ключевое слово</string>
    <string name="promt_video_link">Видео можно открыть по ссылке</string>

    <!-- Строки для фрагмента Settings. -->
    <string name="Description">Описание</string>
    <string name="Animation">Анимация</string>
    <string name="watch_greetings_again">Посмотреть приветсвие ещё раз</string>

    <!-- Строки для фрагментов Notebook  -->
    <string name="notebook">Notebook</string>
    <string name="date" translatable="false">Дата</string>
    <string name="noteName" translatable="false">Наименование</string>
    <string name="description" translatable="false">Описание</string>
    <string name="select" translatable="false">Выбрать</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="greeting_stars">greeting_stars</string>
</resources>