<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings" />

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <TextView
            android:id="@+id/textView_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/style" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_light"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dark"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_red"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_space"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space" />
    </com.google.android.material.chip.ChipGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />
    </RadioGroup>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" />

</LinearLayout>