<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_picture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_pager_navi_points_margin_bottom"
        android:background="#1A000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView_navi_ind_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#1A000000"
            android:contentDescription="@string/navigation_indicator_1"
            app:srcCompat="@drawable/swipe_indicator_passive" />

        <ImageView
            android:id="@+id/imageView_navi_ind_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_pager_navi_points_margin_start"
            android:layout_weight="1"
            android:background="#1A000000"
            android:contentDescription="@string/navigation_indicator_2"
            app:srcCompat="@drawable/swipe_indicator_passive" />

        <ImageView
            android:id="@+id/imageView_navi_ind_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_pager_navi_points_margin_start"
            android:layout_weight="1"
            android:background="#1A000000"
            android:contentDescription="@string/navigation_indicator_3"
            app:srcCompat="@drawable/swipe_indicator_active" />
    </LinearLayout>

    <Button
        android:id="@+id/button_start"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/view_pager_navi_points_margin_start"
        android:text="@string/letStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/greetingsTextStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1A000000"
        android:gravity="center"
        android:text="@string/greetings_threeth_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />
</androidx.constraintlayout.widget.ConstraintLayout>