<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/view_earth" />

    <ImageView
        android:id="@+id/imageView_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1A000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_swipe" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="48dp"
        android:background="#1A000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView_navi_ind_1"
            android:background="#1A000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/swipe_indicator_active"
            android:contentDescription="@string/navigation_indicator_1"/>

        <ImageView
            android:id="@+id/imageView_navi_ind_2"
            android:background="#1A000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/swipe_indicator_passive"
            android:contentDescription="@string/navigation_indicator_2"/>

        <ImageView
            android:id="@+id/imageView_navi_ind_3"
            android:background="#1A000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/swipe_indicator_passive"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/navigation_indicator_3"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/greetingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1A000000"
        android:gravity="center"
        android:text="@string/greetings_first_text_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_swipe" />

    <TextView
        android:id="@+id/textView2"
        style="@style/greetingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1A000000"
        android:gravity="center"
        android:text="@string/greetings_first_text_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>