<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/POTDFStyle">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/photoAlbum_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appbar"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <LinearLayout
                    android:id="@+id/input_parameters_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_general"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/General_theme"
                        android:textColor="?customEditTextColor"
                        android:textColorHint="?customHintEditTextColor">
                    </com.google.android.material.textfield.TextInputEditText>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_comm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Second_theme"
                        android:minHeight="48dp"
                        android:textColor="?customEditTextColor"
                        android:textColorHint="?customHintEditTextColor" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textView_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/key_word"
                        android:minHeight="48dp"
                        android:textColor="?customEditTextColor"
                        android:textColorHint="?customHintEditTextColor" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?fabBackgroundColor"
                        android:text="@string/Find"
                        android:textColor="?customEditTextColor"
                        android:paddingBottom="@dimen/padding_bottom_input_layout">
                    </com.google.android.material.button.MaterialButton>
                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/photoAlbum_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_anchor="@id/photoAlbum_appbar"
        app:layout_anchorGravity="bottom">

        <TextView
            android:id="@+id/textView_photoAlbum_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NASA_photo_album"
            android:textColor="?customTextColor" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>